--- a/PA1.ipynb
+++ b/PA1.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "01153336",
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ce2c90a3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter floating point number: 66.6\n",
+      "Enter an integer: 8\n",
+      "The sum is 74.6\n",
+      "The difference is 58.599999999999994\n",
+      "The product is 532.8\n",
+      "The quotient is 8.325\n",
+      "The type of this result is a <class float>\n"
+     ]
+    }
+   ],
    "source": [
     "##Programming Assignment 1, Richard Osborn, Version 1, CS-150-1, DUE 9/1/21\n",
     "number1 = float(input('Enter floating point number: '))\n",
@@ -24,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f112793b",
+   "id": "354fc1dd",
    "metadata": {},
    "outputs": [],
    "source": []
